tests/regression/error/unguarded_pre_in_contract_call.lus
contract spec (in: int) returns (out: int) ;
let
  assume in > 0 ;
  guarantee out > 0 ;
tel

node top (in: int) returns (out: int) ;
(*@contract
  import spec (pre in) returns (out) ;
*)
let
  out = 0 -> pre in ;
tel